pyinterp/pyinterp/pyinterp/tests/must_pass/errors/missing_arg2.py
def f(x, y):
    pass
f()
